--- a/vercel.json
+++ b/vercel.json
@@ -3,28 +3,16 @@
   "builds": [
     {
       "src": "app.py",
-      "use": "@vercel/python",
-      "config": { "maxLambdaSize": "15mb", "runtime": "python3.12" }
-    },
-    {
-      "src": "static/**",
-      "use": "@vercel/static"
+      "use": "@vercel/python"
     }
   ],
   "routes": [
-    {
-      "src": "/static/(.*)",
-      "dest": "/static/$1"
-    },
     {
       "src": "/(.*)",
       "dest": "app.py"
     }
   ],
-  "crons": [
-    {
-      "path": "/api/trigger-check-scheduled",
-      "schedule": "0 0 * * *"
-    }
-  ]
+  "env": {
+    "FLASK_ENV": "production"
+  }
 }
